<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">blinkbox</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="font_label_serif_font">"Serif font"</string>
    <string name="font_label_sans_serif_font">"Sans Serif font"</string>
    <string name="font_label_monospace_font">"Monospace font"</string>
    <string name="font_lola_medium">fonts/fs_lola_medium.otf</string>
    <string name="font_lola_regular">fonts/fs_lola_regular.otf</string>
    <string name="font_roboto_medium">fonts/roboto_medium.ttf</string>
    <string name="font_roboto_regular">fonts/roboto_regular.ttf</string>
    <string name="font_opensans_regular">fonts/opensans_regular.ttf</string>
    <string name="menu_item_tableofcontents">Table of contents</string>
    <string name="menu_item_contents">Contents</string>
    <string name="menu_item_read">Read</string>
    <string name="menu_item_buy_full_ebook">Buy full ebook</string>
    <string name="menu_item_remove">Remove</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_about_this_book">About this book</string>
    <string name="menu_item_bookmark_this_page">Bookmark this page</string>
    <string name="menu_item_remove_bookmark">Remove bookmark</string>
    <string name="menu_item_go_to_shop">Go to the shop</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_reader_settings">Reading settings</string>
    <string name="menu_item_download">Download</string>
    <string name="menu_item_read_later">Read later</string>
    <string name="remove_book_warning_message">Your book download will be deleted, but you can redownload it from your library any time</string>
    <string name="remove_sample_warning_message">Your sample will be deleted and removed from the library</string>
    <string name="reader_full_screen_image">Full screen image</string>
    <string name="reader_bookmark_on_page">Remove bookmark</string>
    <string name="reader_bookmark_off_page">Add bookmark</string>
    <string name="button_signin_or_register">Sign in or Register</string>
    <string name="button_sign_in_to_find_book">Sign in</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_retry">Retry</string>
    <string name="button_options">Options</string>
    <string name="button_sign_in_with_this_email">Sign in with this email</string>
    <string name="button_register">Register</string>
    <string name="button_view_more_books_shop">View more ebooks in the shop</string>
    <string name="button_back_to_your_saved_position">Back to your saved position</string>
    <string name="button_back_to_your_last_page">Go back to my last page</string>
    <string name="button_dismiss"><u>Dismiss</u></string>
    <string name="button_close">Close</string>
    <string name="button_go_to_your_devices">Go to \'Your devices\'</string>
    <string name="button_go_to_devices">Go to your devices</string>
    <string name="button_keep">Keep</string>
    <string name="button_delete">Delete</string>
    <string name="button_leave">Leave</string>
    <string name="button_continue_registration">Continue</string>
    <string name="button_go_to_new_position">"Go to new position"</string>
    <string name="button_stay_where_i_am">"Stay where I am"</string>
    <string name="button_send_reset_link">Send reset link</string>
    <string name="button_cant_remember_which_email_I_used">I can\'t remember my email address either!</string>
    <string name="button_pay_now">Pay now</string>
    <string name="button_add_card">Add a new card</string>
    <string name="button_change"><u>Change</u></string>
    <string name="button_go_to_library">Go to my library</string>
    <string name="button_find_more_books">Find more books</string>
    <string name="button_confirm_password">Confirm password</string>
    <string name="button_create_my_account">Create my account</string>
    <string name="button_buy_capital">BUY</string>
    <string name="button_buy_now">Buy now</string>
    <string name="button_read_now">Read now</string>
    <string name="button_get_free_sample">Get free sample</string>
    <string name="button_download">Download</string>
    <string name="button_see_all_books_author">See all books by this author</string>
    <string name="button_see_full_definition">See full definition</string>
    <string name="title_about_this_book">About this book</string>
    <string name="title_related_books">Other ebooks you might like</string>
    <string name="title_registration_header">Get started with blinkbox Books</string>
    <string name="title_choose_a_password">Choose a password</string>
    <string name="title_terms_and_conditions">Terms and conditions</string>
    <string name="title_choose_your_reading_position">Choose your reading position</string>
    <string name="title_end_of_sample">That\'s the end of this sample! Want to know what happens next? Read on!</string>
    <string name="title_end_of_book">You\'ve finished this ebook! Discover your next favourite&#8230;</string>
    <string name="title_max_downloads_exceeded">Download limit reached</string>
    <string name="title_password_help">How to make your password stronger</string>
    <string name="title_where_is_my_clubcard_number">Where is my Clubcard number?</string>
    <string name="title_client_limit_reached">Signing in to this device</string>
    <string name="title_save_your_reading_position">Save your reading position?</string>
    <string name="title_device_offline">No internet connection</string>
    <string name="title_delete_this_highlight">Delete this highlight?</string>
    <string name="title_delete_this_bookmark">Delete this bookmark?</string>
    <string name="title_reg_back_confirm">Leave registration?</string>
    <string name="title_reset_your_password">Reset your password</string>
    <string name="title_password_reset_sent">We\'ve sent you a link</string>
    <string name="title_buy_the_full_book_question">"Buy the full book?"</string>
    <string name="title_confirm_password">Re-enter your password</string>
    <string name="title_error">Error</string>
    <string name="title_register_new_account">Create a free blinkbox Books account</string>
    <string name="title_you_already_have_this_book">You already have this book!</string>
    <string name="title_purchase_complete">Your new book is downloading</string>
    <string name="title_welcome_to_blinkbox_books">Welcome to blinkbox Books!</string>
    <string name="already_with_us">Already reading with us?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="title_insufficient_space">Insufficient space</string>
    <string name="title_featured">Featured</string>
    <string name="title_categories">Categories</string>
    <string name="title_bestsellers_fiction">Fiction top 100</string>
    <string name="title_bestsellers_nonfiction">Non-fiction top 100</string>
    <string name="title_freebooks">Free ebooks</string>
    <string name="title_newreleases">New releases</string>
    <string name="title_have_a_look_inside">Have a look inside</string>
    <string name="title_description">Description</string>
    <string name="title_other_books_by_this_author">Other ebooks by this author</string>
    <string name="title_add_sample_dialog">Read Sample</string>
    <string name="dialog_device_is_offline">You\'re not currently connected to the internet, so you are unable to download at this time. Please check your network settings and try again.</string>
    <string name="dialog_use_wifi_for_optimum_download_experience">Use WiFi for optimum download experience</string>
    <string name="dialog_are_you_sure_you_want_to_continue">Are you sure you want to continue?</string>
    <string name="dialog_are_you_sure_you_want_to_remove_all_bookmarks">Are you sure you want to remove all bookmarks?</string>
    <string name="dialog_are_you_sure_you_want_to_delete_this_bookmark">Are you sure you want to delete this bookmark?\n\n\"%s\"\n\nThis bookmark will be deleted across all your devices.</string>
    <string name="dialog_are_you_sure_you_want_to_delete_this_highlight">Are you sure you want to delete this highlight?</string>
    <string name="dialog_are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="dialog_keep_reading_position">You are about to leave this page. Would you like to save your current reading position?</string>
    <string name="dialog_password_confirm">For security reasons, we ask that you re-enter your password every 30 minutes.</string>
    <string name="label_email_address">Email address</string>
    <string name="label_enter_password">Enter password</string>
    <string name="hint_card_month">MM</string>
    <string name="hint_card_year">YYYY</string>
    <string name="hint_cvv">Security no.</string>
    <string name="hint_name_on_card">Name on card</string>
    <string name="hint_address_line_1">Address line 1</string>
    <string name="hint_address_line_2">Address line 2 (optional)</string>
    <string name="hint_locality">Town or City</string>
    <string name="hint_postcode">UK postcode</string>
    <string name="help">Help</string>
    <string name="shop">Shop</string>
    <string name="s_library">"%s library"</string>
    <string name="refresh_your_library">Refresh your library</string>
    <string name="contact_us">Contact us</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="password">Password</string>
    <string name="your_bookmarks_and_highlights">Your bookmarks</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="i_need_a_new_password">I need a new password</string>
    <string name="register">Register</string>
    <string name="login_signin_header">Already using blinkbox Books? Sign in</string>
    <string name="shop_for_more_books">Shop for more books</string>
    <string name="help_ive_forgotten_my_password">I need a new password</string>
    <string name="login_registration_subtext">Ready to download books to this device? Simply create a free blinkbox Books account</string>
    <string name="info">Info</string>
    <string name="content_description_sign_in">Sign In</string>
    <string name="error_form_generic">Oops! There are some things below that you need to address</string>
    <string name="card_number">Card number</string>
    <string name="securely_save_these_payment">Save this card so I can purchase faster next time</string>
    <string name="enter_your_payment_details">All your payment and stored information are guaranteed secure and private with blinkbox Books.</string>
    <string name="why_cant_i_add_a_card_from_overseas">"Why can't I add a card from overseas?"</string>
    <string name="our_service_is_only_available">"Our service is only available to UK residents, so we need you to use a card registered in the UK. If you're from overseas, we're sorry you can't use the service - but we bet you're really cool and exotic."</string>
    <string name="add_card_header">Enter your card details</string>
    <string name="expiry_date">Expiry date</string>
    <string name="my_library_lower_l">My library</string>
    <string name="currently_reading">Currently reading</string>
    <string name="update_info_title">Welcome to our new app</string>
    <string name="update_info_whats_changed">Here\'s what\'s changed:</string>
    <string tools:ignore="Typos" name="update_info_ok_button">Ok, got it</string>
    <string name="next">Next</string>
</resources>