<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2014 blinkbox Entertainment Limited. All rights reserved. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bbb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.blinkboxbooks.android.widget.BBBTextView
        style="@style/TextStyle.Title1"
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title_confirm_password"
        android:layout_marginBottom="@dimen/gap_medium" />

    <com.blinkboxbooks.android.widget.BBBTextView
        style="@style/TextStyle.Body2"
        android:id="@+id/textview_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_password_confirm"
        android:layout_below="@+id/textview_title"
        android:layout_marginBottom="@dimen/gap_medium"/>

    <com.blinkboxbooks.android.widget.BBBEditText
        android:id="@+id/edittext_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/label_enter_password"
        android:layout_below="@+id/textview_body" />

    <com.blinkboxbooks.android.widget.BBBTextView
        style="@style/TextStyle.Body2.Link"
        android:id="@+id/textview_forgotten_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_password"
        android:layout_alignLeft="@+id/edittext_password"
        android:paddingTop="@dimen/gap_small"
        android:text="@string/help_ive_forgotten_my_password"
        android:layout_marginTop="@dimen/gap_medium"/>

    <com.blinkboxbooks.android.widget.BBBButton
        android:id="@+id/button_confirm_password"
        style="@style/ButtonStyle.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/gap_large"
        android:text="@string/button_confirm_password"
        android:layout_below="@+id/textview_forgotten_password" />

</RelativeLayout>